tdf#121140: GPG checkbox only for file formats with GPGENCRYPTION flag

Only ODF-1.2 and ODF 1.3 support GPG encryption.
Flat ODF and other formats do NOT, so lets not offer an option that
subsequent code path ignores.

Change-Id: Ie43be433fbcaa56c76b25e12b58b084ea9bcfd6a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168001
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit 76f4e6d9764048d98f3fdd1620b0e0a6787385c1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170343